# lazy-cache

./: CHANGELOG.md  Readme.md  Readme.mkd  cabal.project  lazy-cache.cabal
.github/workflows/: haskell-ci.yml  haskell.yml
src/System/: Cache.hs
src/System/Cache/Impl/: Ghc.hs  MVar.hs  NoCache.hs
src/System/Cache/Internal/: Interface.hs
test/Cheops/Cache/: CacheSpec.hs
